# Sight-Reduction-Library

./: .gitignore  README.md  aeronautical.md  aeronauticalplan.md  config.py  env.backup  explore_skyalmanac.py  new_doc_section.md  pyproject.toml  report.md  requirements.txt  run_tests.py  run_tests.sh  setup.sh  sight.ipynb  test_almanac_integration.py  test_skyalmanac.py
.qwen/: PROJECT_SUMMARY.md
docs/: README.md  api_reference.md  atmospheric_corrections.md  aviation_navigation_guide.md  complete_sight_reduction_tutorial.md  index.md  installation_guide.md  latex_tutorial.md  position_fix_documentation.md  position_fix_example.md  sight_reduction_documentation.md  testing_validation.md  usage_examples.md  usage_examples_extended.md
examples/: booklet_generation_example.py  plotting_examples.py
src/: __init__.py  almanac_integration.py  aviation_almanac.py  cli.py  latex_output.py  latex_templates.py  main.py  planetary_data.py  plotting.py  position_fix.py  problem_generator.py  sight_reduction.py  sight_reduction.py.bak  star_database.py
tests/: test_almanac_latex_generation.py  test_atmospheric_corrections.py  test_aviation_functionality.py  test_booklet_generation.py  test_celestial_bodies.py  test_latex_output.py  test_latex_placeholder_escaping.py  test_multiple_sight_latex_generation.py  test_plotting.py  test_position_fix.py  test_problem_generator.py  test_sight_reduction.py
